Exclude dependencies, update run config